--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^26.0.4",
-    "@types/node": "^12.11.2",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "concurrently": "^5.0.0",
-    "eslint": "^7.4.0",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-watch": "^7.0.0",
-    "jest": "^26.1.0",
+    "@types/jest": "^29.2.0",
+    "@types/node": "*",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "concurrently": "^7.5.0",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-watch": "^8.0.0",
+    "jest": "^29.2.2",
     "prettier": "^2.0.5",
-    "ts-jest": "^26.1.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.1.2"
   },
   "files": [
@@ -50,8 +50,8 @@
       "sourceType": "module"
     },
     "extends": [
+      "eslint:recommended",
       "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint",
       "plugin:prettier/recommended"
     ],
     "rules": {
@@ -68,7 +68,6 @@
   ],
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
       "/node_modules/",
       "testHelpers",
